# AuditAgent

./: .gitignore  .mise.toml  AUTOMATED_REMEDIATION.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  GETTING_STARTED.md  Makefile  README.md  SECURE_AUTHENTICATION.md  pyproject.toml  remediation-policy.yaml  requirements.txt  ruff.toml  test-devices.yaml  test-policy.yaml  test_prompts.py
.audit-agent/: sandbox-42.json
.github/workflows/: ci.yml  lint.yml  test.yml
audit_agent/: __init__.py  cli.py
audit_agent/ai/: __init__.py  analyzer.py  config.py  providers.py  remediation.py
audit_agent/audit/: __init__.py  engine.py
audit_agent/core/: __init__.py  credentials.py  logging_config.py  objects.py  policy.py  rules.py  token.py
audit_agent/devices/: __init__.py  base.py  linux_iptables.py  simulated_iptables.py
audit_agent/enforcement/: __init__.py  engine.py  remediation.py
audit_agent/server/: api.py  auth.py  schemas.py
docs/: AI_REMEDIATION.md  AUTOMATED_REMEDIATION.md
examples/: README.md  clean-linux-policy.yaml  devices.yaml  example-devices.yaml  example.py  linux_example.py  sandbox-devices.yaml  simple-linux-policy.yaml  web-server-policy.yaml
tests/: __init__.py  run_tests.py  test_ai.py  test_audit_engine.py  test_auto_generate.py  test_credentials.py  test_enforcement_engine.py  test_linux_iptables.py  test_objects.py  test_policy.py  test_rules.py  test_sandbox_enforcement.py  test_server_auth.py
